create new title

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Название нашего сайта</title>
     <meta charset="UTF-8">
-    <title>Заголовок</title>
+    <title>Заголовок Ешкин кот</title>
 </head>
 <body>
 
